fix: broken layout

--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -6,7 +6,6 @@
   font-size: 18px;
   outline: none;
   padding: 15px;
-  padding: 4px;
   transition: 0.2s;
   width: 60%;
 }
