--- a/src/components/SearchPanel/SearchPanel.scss
+++ b/src/components/SearchPanel/SearchPanel.scss
@@ -1,3 +1,6 @@
 .search-container {
   height: 400px;
 }
+.search-panel__row {
+  display: flex;
+}
